--- a/register.html
+++ b/register.html
@@ -21,10 +21,10 @@
       <a href="home.html" class="button-nav">
         HOME
       </a>
-      <a href="season.html" class="button-nav button-prime">
+      <a href="season.html" class="button-nav">
         SEASON
       </a>
-      <a href="register.html" class="button-nav">
+      <a href="register.html" class="button-nav button-prime">
         REGISTER
       </a>
     </div>
